[project]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = [
    { name = "Sergey Knyazkov", email = "serg.r88@gmail.com" }
]
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "prompt>=0.4.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.ruff]
output-format = "concise"
line-length = 80

[tool.ruff.lint]
extend-select = [
    "E", # pycodestyle Errors
    "W", # pycodestyle Warnings
    "C90", # mccabe
    "I", # isort
    "B", # flake8-bugbear
    "COM", # flake8-commas
    "Q", # flake8-quotes
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "PL", # Pylint
    "N", # pep8-naming
]
preview = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
